sandbox/output
TicketDispenserTest.java:2: error: package org.jmock does not exist
import org.jmock.*;
^
TicketDispenserTest.java:3: error: package org.jmock.integration.junit4 does not exist
import org.jmock.integration.junit4.*;
^
2 errors
